[package]
name = "hyper-proxy-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["trace"] }

# 1. 纯 Rust 的 TLS 实现，安全且现代
rustls = "0.23"
# 2. 为 Hyper Client 提供 HTTPS 支持
hyper-rustls = { version = "0.27", features = ["http1", "http2", "tls12", "native-tokio"] }
# 3. 为 Tokio 提供 TLS 监听支持
tokio-rustls = "0.26"
# 4. 用于读取本地证书文件 (.pem / .key)
rustls-pemfile = "2"
# 5. 跨平台的类型定义 (Rustls 0.23+ 标准)
rustls-pki-types = "1"
