[package]
name = "hyper-proxy-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

tower = { version = "0.5", features = ["util", "timeout", "limit", "retry"] }
tower-http = { version = "0.6", features = ["trace"] }

# 1. 纯 Rust 的 TLS 实现，安全且现代
rustls = "0.23"
# 2. 为 Hyper Client 提供 HTTPS 支持
hyper-rustls = { version = "0.27", features = ["http1", "http2", "tls12", "native-tokio"] }
# 3. 为 Tokio 提供 TLS 监听支持
tokio-rustls = "0.26"
# 4. 用于读取本地证书文件 (.pem / .key)
rustls-pemfile = "2"
# 5. 跨平台的类型定义 (Rustls 0.23+ 标准)
rustls-pki-types = "1"


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.10"
clap = { version = "4.5", features = ["derive"] }

metrics = "0.24"
metrics-exporter-prometheus = "0.18"

arc-swap = "1.8"
notify = "8"
tokio-util = "0.7"

governor = "0.10"

# === 新增：分布式追踪依赖 ===
# OTel 核心 API
opentelemetry = "0.31"
# OTel SDK
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
# OTLP 导出器 (用于发数据给 Jaeger)
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }

# 将 tracing crate 的日志桥接到 OTel
tracing-opentelemetry = "0.32"
# HTTP 语义约定 (用于处理 Header)
opentelemetry-http = "0.31"

rustls-acme = { version = "0.15", features = ["tokio"]  }
# futures 库用于处理 ACME 的异步流
futures = "0.3"

tokio-stream = "0.1.18"

jsonwebtoken = { version = "10", features = ["rust_crypto"] }

rand = "0.10"

wasmtime = "42.0.1"
wasmtime-wasi = { version = "42.0.1", features = ["p1"] }
anyhow = "1.0"

# 高性能并发缓存库
moka = { version = "0.12", features =["future"] }

# === 性能优化：替换全局内存分配器 ===
# 只在非 Windows 环境下引入 jemalloc
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] } # 控制库


[[bin]]
name = "hyper-proxy-tool"
path = "src/main.rs"
